_generated-doc/2.7/config/quarkus-smallrye-graphql.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-smallrye-graphql_configuration]]link:#quarkus-smallrye-graphql_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.root-path]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.root-path[quarkus.smallrye-graphql.root-path]`

[.description]
--
The rootPath under which queries will be served. Default to graphql By default, this value will be resolved as a path relative to `$++{++quarkus.http.root-path++}++`.
--|string 
|`graphql`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.metrics.enabled]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.metrics.enabled[quarkus.smallrye-graphql.metrics.enabled]`

[.description]
--
Enable metrics. By default this is false. If set to true, a metrics extension is required.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.tracing.enabled]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.tracing.enabled[quarkus.smallrye-graphql.tracing.enabled]`

[.description]
--
Enable tracing. By default this will be enabled if the tracing extension is added.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.validation.enabled]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.validation.enabled[quarkus.smallrye-graphql.validation.enabled]`

[.description]
--
Enable validation. By default this will be enabled if the Hibernate Validator extension is added.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.events.enabled]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.events.enabled[quarkus.smallrye-graphql.events.enabled]`

[.description]
--
Enable eventing. Allow you to receive events on bootstrap and execution.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.http.get.enabled]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.http.get.enabled[quarkus.smallrye-graphql.http.get.enabled]`

[.description]
--
Enable GET Requests. Allow queries via HTTP GET.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.http.post.queryparameters.enabled]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.http.post.queryparameters.enabled[quarkus.smallrye-graphql.http.post.queryparameters.enabled]`

[.description]
--
Enable Query parameter on POST Requests. Allow POST request to override or supply values in a query parameter.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.auto-name-strategy]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.auto-name-strategy[quarkus.smallrye-graphql.auto-name-strategy]`

[.description]
--
Change the type naming strategy.
--|`default`, `merge-inner-class`, `full` 
|`default`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.error-extension-fields]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.error-extension-fields[quarkus.smallrye-graphql.error-extension-fields]`

[.description]
--
List of extension fields that should be included in the error response. By default none will be included. Examples of valid values include ++[++exception,classification,code,description,validationErrorType,queryPath++]++
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.show-runtime-exception-message]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.show-runtime-exception-message[quarkus.smallrye-graphql.show-runtime-exception-message]`

[.description]
--
List of Runtime Exceptions class names that should show the error message. By default Runtime Exception messages will be hidden and a generic `Server Error` message will be returned.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.hide-checked-exception-message]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.hide-checked-exception-message[quarkus.smallrye-graphql.hide-checked-exception-message]`

[.description]
--
List of Checked Exceptions class names that should hide the error message. By default Checked Exception messages will show the exception message.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.default-error-message]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.default-error-message[quarkus.smallrye-graphql.default-error-message]`

[.description]
--
The default error message that will be used for hidden exception messages. Defaults to "Server Error"
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.print-data-fetcher-exception]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.print-data-fetcher-exception[quarkus.smallrye-graphql.print-data-fetcher-exception]`

[.description]
--
Print the data fetcher exception to the log file. Default `true` in dev and test mode, default `false` in prod.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.schema-available]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.schema-available[quarkus.smallrye-graphql.schema-available]`

[.description]
--
Make the schema available over HTTP.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.schema-include-scalars]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.schema-include-scalars[quarkus.smallrye-graphql.schema-include-scalars]`

[.description]
--
Include the Scalar definitions in the schema.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.schema-include-schema-definition]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.schema-include-schema-definition[quarkus.smallrye-graphql.schema-include-schema-definition]`

[.description]
--
Include the schema internal definition in the schema.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.schema-include-directives]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.schema-include-directives[quarkus.smallrye-graphql.schema-include-directives]`

[.description]
--
Include Directives in the schema.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.schema-include-introspection-types]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.schema-include-introspection-types[quarkus.smallrye-graphql.schema-include-introspection-types]`

[.description]
--
Include Introspection Types in the schema.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.log-payload]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.log-payload[quarkus.smallrye-graphql.log-payload]`

[.description]
--
Log the payload (and optionally variables) to System out.
--|`off`, `query-only`, `query-and-variables` 
|`off`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.field-visibility]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.field-visibility[quarkus.smallrye-graphql.field-visibility]`

[.description]
--
Set the Field visibility.
--|string 
|`default`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.unwrap-exceptions]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.unwrap-exceptions[quarkus.smallrye-graphql.unwrap-exceptions]`

[.description]
--
Exceptions that should be unwrapped (class names).
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.websocket-subprotocols]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.websocket-subprotocols[quarkus.smallrye-graphql.websocket-subprotocols]`

[.description]
--
Subprotocols that should be supported by the server for graphql-over-websocket use cases. Allowed subprotocols are "graphql-ws" and "graphql-transport-ws". By default, both are enabled.
--|list of string 
|


a| [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.ui.enable]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.ui.enable[quarkus.smallrye-graphql.ui.enable]`

[.description]
--
If GraphQL UI should be enabled. By default, GraphQL UI is enabled if it is included (see `always-include`).
--|boolean 
|`true`


h|[[quarkus-smallrye-graphql_quarkus.smallrye-graphql.ui-smallrye-graphql-ui-configuration]]link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.ui-smallrye-graphql-ui-configuration[SmallRye GraphQL UI configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.ui.root-path]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.ui.root-path[quarkus.smallrye-graphql.ui.root-path]`

[.description]
--
The path where GraphQL UI is available. The value `/` is not allowed as it blocks the application from serving anything else. By default, this URL will be resolved as a path relative to `$++{++quarkus.http.non-application-root-path++}++`.
--|string 
|`graphql-ui`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.ui.always-include]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.ui.always-include[quarkus.smallrye-graphql.ui.always-include]`

[.description]
--
Always include the UI. By default this will only be included in dev and test. Setting this to true will also include the UI in Prod
--|boolean 
|`false`

|===